--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -13,3 +13,44 @@ header{
     color: white;
     text-align: center;
 }
+header > h1{
+    padding-top: 50px;
+    font-variant: small-caps;
+}
+header > p{
+    padding-bottom: 50px;
+}
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+section.normal{
+    background-color: white;
+    color: 
+    black;   
+}
+section.imagem{
+    background-color: rgb(51, 51, 51);
+    color:white;
+}
+section.imagem > p{
+    background-color: rgba(0, 0, 0, 0.26);
+    width: 400px;
+} 
+a{
+    font-weight: bolder;
+    color: white;
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
+
+}
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 15px;
+}
