--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -1,19 +1,31 @@
 @charset "utf-8";
-
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 *{
     margin: 0;
     padding: 0;
+    font-size: 1em;
 }
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', sans-serif;
+    --fonte3: 'Sriracha', cursive;
+}
+
 html,body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
+    
 }
 header{
     background-color: black;
     color: white;
     text-align: center;
+    font-family: var(--fonte2);
 }
 header > h1{
+    font-size: 10vw;
     padding-top: 50px;
     font-variant: small-caps;
 }
@@ -25,6 +37,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.6vw;
 }
 section.normal{
     background-color: white;
@@ -37,10 +51,12 @@ section.imagem{
 }
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.26);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 } 
 a{
-    font-weight: bolder;
+    letter-spacing: 1px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
     text-decoration: none;
 }
