--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -48,12 +48,21 @@ section.normal{
 section.imagem{
     background-color: rgb(51, 51, 51);
     color:white;
+    background-image: url('imagens/background001.jpg');
+    height: 100%;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    position: relative;
 }
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.26);
     display: inline-block;
     padding: 5px;
 } 
+section > p {
+    padding-bottom: 2em;
+}
 a{
     letter-spacing: 1px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
