--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -48,21 +48,22 @@ section.normal{
 section.imagem{
     background-color: rgb(51, 51, 51);
     color:white;
+
+}
+section#img01{
     background-image: url('imagens/background001.jpg');
     height: 100%;
     background-attachment: fixed;
     background-size: cover;
-    background-position: center;
+    background-position: right center;
     position: relative;
 }
-section.imagem1{
-    background-color: rgb(51, 51, 51);
-    color:white;
+section#img02{
     background-image: url('imagens/background002.jpg');
     height: 100%;
     background-attachment: fixed;
     background-size: cover;
-    background-position: center;
+    background-position: right center;
     position: relative;
 }
 section.imagem > p{
