--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -67,9 +67,10 @@ section#img02{
     position: relative;
 }
 section.imagem > p{
-    background-color: rgba(0, 0, 0, 0.26);
+    background-color: rgba(0, 0, 0, 0.363);
     display: inline-block;
     padding: 5px;
+    text-shadow:1px 2px 0px black ;
 } 
 section > p {
     padding-bottom: 2em;
