--- a/projeto-cordel/style.css
+++ b/projeto-cordel/style.css
@@ -48,6 +48,7 @@ section.normal{
 section.imagem{
     background-color: rgb(51, 51, 51);
     color:white;
+    box-shadow: inset 6px 6px 13px 5px rgba(0, 0, 0, 0.582);
 
 }
 section#img01{
