--- a/Projeto-lalamove/style.css
+++ b/Projeto-lalamove/style.css
@@ -102,5 +102,7 @@ nav > a:hover{
 }
 section > div{
     background-color: orange;
-    width: 5;
+    width: 260px;
+    height: 245px;
+    display: inline-block;
 }
