--- a/Projeto-lalamove/style.css
+++ b/Projeto-lalamove/style.css
@@ -3,6 +3,13 @@
     margin: 0;
     padding: 0;
 }
+body{
+    height: 100%;
+    margin: 0;
+    
+    
+    
+}
 
 header{
     text-align: center;
@@ -101,8 +108,32 @@ nav > a:hover{
     color: orangered;
 }
 section > div{
-    background-color: orange;
+    display: inline-block;
     width: 260px;
     height: 245px;
-    display: inline-block;
+    background-color: #f7620c;
+    margin: auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: left;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-left: 5%;
+}
+
+@media (max-width: 768px) {
+    section > div {
+        width: 80%;
+        margin-top: 2%;
+        height: auto; /* Tornar a altura automática para ajustar o conteúdo */
+    }
+}
+
+
+#caixa{
+
+    text-align: center;
+ 
+    
 }
