--- a/Projeto-lalamove/style.css
+++ b/Projeto-lalamove/style.css
@@ -1,10 +1,11 @@
 @charset "utf-8";
 *{
+    
     margin: 0;
     padding: 0;
 }
 body{
-    height: 100%;
+    
     margin: 0;
     
     
@@ -117,9 +118,9 @@ section > div{
     top: 50%;
     transform: translateY(-50%);
     text-align: left;
+    margin: 2%;
     
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-left: 5%;
+    
 }
 
 @media (max-width: 768px) {
@@ -131,6 +132,7 @@ section > div{
 }
 section > div:hover{
     background: linear-gradient(to right, rgb(53, 52, 52), rgb(44, 44, 43));
+   
 }
 
 
@@ -138,6 +140,7 @@ section > div:hover{
     
     text-align: center;   
 }
+
 
 .div1{
     
@@ -152,6 +155,12 @@ section > div:hover{
    
     
 }
+#caixa  h1:hover{
+    color: rgb(230, 70, 6);
+
+   
+    
+}
 #caixa p{
     
     color: white;
@@ -161,25 +170,54 @@ section > div:hover{
     
     
 }
+#caixa p:hover{
+    
+    color: rgb(255, 115, 0);
+   
+    
+    
+}
 #caixa .p1 > p{
     
     color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-weight: bold;
+     
+}
+#caixa .p1 > p:hover{
+    
+    color: rgb(253, 95, 3);
     
     font-weight: bold;
      
+}
+#caixa .p1{
+    text-decoration: none;
 }
 .imgdiv{
   width: 60px;
   height: 60px;
   padding: 15px;
 }
-.linkdiv{
-    text-decoration: none;
-    
-}
+
 .link{
      text-decoration: none;
-            
+     
+              
+}
+
+#banner img{
+    max-width: 100%;
+    height: auto;
+    width: 1000px;
+    text-align: center;
     
     
+}
+#divimg{
+    text-align: center;
+    margin-top: -50px;
+    margin-bottom: 40px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
