--- a/Projeto-lalamove/style.css
+++ b/Projeto-lalamove/style.css
@@ -23,8 +23,6 @@ nav{
     background-image: linear-gradient(to left, transparent, rgba(0, 0, 0, 0.705)),
     url('imagens/banner1.webp');
     height: 100%;
-    
-    
     background-position: left left;
     position: relative;
     padding: 30px;
@@ -52,7 +50,23 @@ nav > a{
     padding-bottom: 15px;
     margin-bottom: 10px;
     padding: 10px;
+    display:inline-table;
+    
+    
 }
+@media (max-width: 768px) {
+    nav a {
+      flex-direction:column ;
+      align-items: center;
+      
+    }
+  
+    .menu a {
+      margin: 10px 0;
+    }
+  
+    /* Adicione estilos adicionais, como um ícone de hamburguer e animações, conforme necessário */
+  }
 nav > a:hover{
     background-color: rgba(255, 255, 255, 0.404);
     color: rgb(235, 118, 63);
@@ -112,7 +126,7 @@ section > div{
     display: inline-block;
     width: 260px;
     height: 245px;
-    background: linear-gradient(to right, rgb(255, 81, 0), rgb(255, 94, 0));
+    background: linear-gradient(to right, rgb(248, 111, 48), rgb(241, 98, 32));
     margin: auto;
     position:relative;
     top: 50%;
