--- a/ex027/style.css
+++ b/ex027/style.css
@@ -1,34 +1,78 @@
 @charset "UTF-8";
 *{
-    margin: 0px;
+    margin: 15px;
     padding: 0;
 }
 body{
     background-color: rgb(255, 94, 0);
+    font-family: Arial, Helvetica, sans-serif;
 }
-div.container > div{
-    
-    border: 2px solid rgb(255, 255, 255);
-    width: 100px;
-    height: 50px;
-    margin: 0;
-    padding: 20px 0;
 
-    
-
-}
 .container{
+
 display: flex;
-width: 800px;
-border: 1px solid white;
+flex-direction: column;
+min-height: 100vh;
+border: 3px solid white;
+border-radius: 2px;
 
 
-    
 }
 
-@media screen and (min-width: 768px) and (max-width:1200px) {
-    .container{
-        display: flex;
+header{
+    display: flex;
+    text-align: center;
+    color: white;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+}
+footer,.sidebar,.ads,.main,header{
+    background-color: rgba(255, 255, 255, 0.63);
+    border: 3px solid white;
+    border-radius: 10px;
+    text-align: center;
+    padding-top: 10px;
+    
+}
+.content{
+    background-color: rgba(255, 255, 255, 0.356);
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    color: white;
+    border: 3px solid white;
+    border-radius: 2px;
+    
+}
+main{
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    order: -1;
+    flex-basis: 200px;
+}
+.sidebar{
+    order: -1;
+}
+.sidebar,.ads{
+    flex-basis: 100px;
+}
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    color: white;
+
+}
+@media (min-width:56.25em) {
+    .content{
         flex-direction: row;
+        
+
+    }
+    .sidebar{
+        order: -2;
     }
 }
